# podcast_articles

./: 404.html  index.html  pyproject.toml
docs/文章/: 6年口吃治不好？小心家庭忽视让孩子陷入心理怪圈.md  儿童的自卑与优越，竟是一体两面？揭开自卑情结背后的恶性循环.md  口吃不是病？过度纠正反而让孩子更依赖缺陷.md  孩子不敢眼神交流？心理专家：这不是害羞，是自卑情结的危险信号.md  孩子用尿床装病争宠？问题行为竟是优越感陷阱.md  孩子越懒越受关注？揭秘懒惰背后的心理防御机制.md  家长警惕：你随口的‘笨小孩’，正在将孩子推向自卑深渊.md  家长越指责孩子越懒惰？错误教育正在强化逃避心理.md  教育最大的错：用羞辱‘纠正’孩子，结果让他们更怯懦.md  越想被关注的孩子，为何越容易口吃？儿童用‘缺陷’求关注的心理真相.md
search/: search_index.json
文章/6年口吃治不好？小心家庭忽视让孩子陷入心理怪圈/: index.html
文章/8岁前是全家焦点，妹妹出生后却成“问题儿童”？儿童人格统一性崩溃的真相太扎心！/: index.html
文章/争当第一VS全面发展：教育者该如何平衡孩子的野心与成长？/: index.html
文章/优越感是救赎还是深渊？儿童心理矛盾背后的真相/: index.html
文章/儿童的自卑与优越，竟是一体两面？揭开自卑情结背后的恶性循环/: index.html
文章/口吃不是病？过度纠正反而让孩子更依赖缺陷/: index.html
文章/只惩罚行为却不解决根源？儿童教育最大的误区，90%家长都踩过！/: index.html
文章/妹妹出生后哥哥突然变“坏”？3招读懂儿童人格统一性，教师和家长别再错怪孩子！/: index.html
文章/孩子上学总捣乱是故意的？从整体人格视角看儿童行为，教师这样做更有效！/: index.html
文章/孩子不敢眼神交流？心理专家：这不是害羞，是自卑情结的危险信号/: index.html
文章/孩子屡教不改是本性坏？揭开儿童行为背后的人格密码，家长必看！/: index.html
文章/孩子用尿床装病争宠？问题行为竟是优越感陷阱/: index.html
文章/孩子越懒越受关注？揭秘懒惰背后的心理防御机制/: index.html
文章/家长必看：过度期待正在摧毁孩子的抗挫力，你中招了吗？/: index.html
文章/家长警惕：你随口的‘笨小孩’，正在将孩子推向自卑深渊/: index.html
文章/家长越指责孩子越懒惰？错误教育正在强化逃避心理/: index.html
文章/教育最大的错：用羞辱‘纠正’孩子，结果让他们更怯懦/: index.html
文章/被误解的“笨小孩”：左撇子儿童的困境与教育者的失职？/: index.html
文章/越想被关注的孩子，为何越容易口吃？儿童用‘缺陷’求关注的心理真相/: index.html
文章/逃学、犯罪竟是“求关注”？问题儿童的心理呼救信号/: index.html
