[project]
name = "podcast-articles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "cozepy>=0.19.0",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.15",
    "numpy>=2.2.6",
    "python-dotenv>=1.1.1",
]
